--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by venv; see https://docs.python.org/3/library/venv.html
 # Entorno virtual de Python
-venv/
+.venv/
 .env
 
 # Archivos de caché de Python
